--- a/ProAcc/Views/IssueTrack/IndexPage.cshtml
+++ b/ProAcc/Views/IssueTrack/IndexPage.cshtml
@@ -14,12 +14,12 @@
     <thead>
         <tr>
             <th>IssueID</th>
-            <th>IssueName</th>
-            <th>Phase</th>
+            <th style="width:130px">Issue Name</th>
+            <th style="width:89px">Phase</th>
             <th>Task</th>
             <th>Assigned</th>
             <th style="width:130px">Status</th>
-            <th>Created Date</th>
+            <th style="width:89px">Created Date</th>
             <th>Actions</th>
         </tr>
     </thead>
