--- a/ProAcc/Views/IssueTrack/Create.cshtml
+++ b/ProAcc/Views/IssueTrack/Create.cshtml
@@ -3,41 +3,41 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
-
+<a class="card-title">Create Issue</a>
 @{
     Html.RenderAction("InstanceSelection", "ProjectMonitor");
 }
 
 
 
-    <div style="padding:1em;" id="CreateIssue">
-        <a class="card-title">Create Issue</a>
-        <hr />
-        <div class="row">
-            <div class="col-6">
-                <div class="form-group">
-                    <label class="control-label col-md-4 required">Issue Name</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtIssueName" />
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIssueName">&nbsp;</span>
-                    </div>
-                </div>
+<div style="padding:1em;" id="CreateIssue">
 
-                <div class="form-group">
-                    <label class="control-label col-md-4 required">Phase</label>
-                    <div class="col-md-10">
-                        <select class="form-control" id="PhaseMaster">
-                            <option value="0">---Select Phase---</option>
-                        </select>
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhaseId">&nbsp;</span>
-                    </div>
+    <hr />
+    <div class="row">
+        <div class="col-6">
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Issue Name</label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" id="txtIssueName" />
                 </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIssueName">&nbsp;</span>
+                </div>
+            </div>
 
-                @*<div class="form-group" id="Status">
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Phase</label>
+                <div class="col-md-10">
+                    <select class="form-control" id="PhaseMaster">
+                        <option value="0">---Select Phase---</option>
+                    </select>
+                </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhaseId">&nbsp;</span>
+                </div>
+            </div>
+
+            @*<div class="form-group" id="Status">
                     <label class="control-label col-md-4 required">Status</label>
                     <div class="col-md-10">
                         <select class="form-control" id="ddllist">
@@ -45,40 +45,40 @@
                             <option value="In progress">In progress</option>
                             <option value="Completed">Completed</option>
                             <option value="On hold">On hold</option>
-                            <option value="Resolved waiting for customer conformation">Resolved waiting for customer conformation</option>                           
+                            <option value="Resolved waiting for customer conformation">Resolved waiting for customer conformation</option>
                         </select>
                     </div>
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblStatus">&nbsp;</span>
                     </div>
                 </div>*@
+        </div>
+
+        <div class="col-6">
+
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Assigned To</label>
+                <div class="col-md-10">
+                    @Html.DropDownList("AssignedTo", new SelectList(Enumerable.Empty<SelectListItem>(), "UserId", "Name"), "--Select User---", htmlAttributes: new { @class = "form-control", id = "drpAssignedTo" })
+                </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblAssignedTo">&nbsp;</span>
+                </div>
             </div>
 
-            <div class="col-6">
-
-                <div class="form-group">
-                    <label class="control-label col-md-4 required">Assigned To</label>
-                    <div class="col-md-10">
-                        @Html.DropDownList("AssignedTo", new SelectList(Enumerable.Empty<SelectListItem>(), "UserId", "Name"), "--Select User---", htmlAttributes: new { @class = "form-control", id = "drpAssignedTo" })
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblAssignedTo">&nbsp;</span>
-                    </div>
+            <div class="form-group" id="Task1">
+                <label class="control-label col-md-4">Task</label>
+                <div class="col-md-10">
+                    <select class="form-control" id="TaskList">
+                        <option value="0">---Select Task---</option>
+                    </select>
                 </div>
-
-                <div class="form-group" id="Task1">
-                    <label class="control-label col-md-4">Task</label>
-                    <div class="col-md-10">
-                        <select class="form-control" id="TaskList">
-                            <option value="0">---Select Task---</option>
-                        </select>
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
-                    </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
                 </div>
+            </div>
 
-                @*<div class="form-group" id="frmgrup1">
+            @*<div class="form-group" id="frmgrup1">
                     <label class="control-label col-md-4 required" for="txtStartDate">Start Date</label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtStartDate" name="date" placeholder="dd/mm/yyyy" />
@@ -100,41 +100,41 @@
                 </div>*@
 
 
-            </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="form-group">
-                    <label class="control-label col-md-4 required">Comments</label>
-                    <div class="col-md-10">
-                        <textarea class="form-control" id="txtComments" name="Description" rows="2" cols="20" style="width:900px;height:100px"></textarea>
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblComments">&nbsp;</span>
-                    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Comments</label>
+                <div class="col-md-10">
+                    <textarea class="form-control" id="txtComments" name="Description" rows="2" cols="20" style="width:900px;height:100px"></textarea>
                 </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-lg-12">
-
-                <div class="col-md-offset-2 col-md-12">
-                    <button type="button" id="btnIssueCreate" class="btn btn-primary ld-ext-right" onclick="this.classList.toggle('running')">
-                        Create
-                        <div class="ld ld-ring ld-spin"></div>
-                    </button>
-                    <div class="col-lg-3" style="float:right;">
-                        @Html.ActionLink("Back to List", "Index", "IssueTrack")
-                    </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblComments">&nbsp;</span>
                 </div>
             </div>
         </div>
     </div>
 
-    <script>
+
+    <div class="row">
+        <div class="col-lg-12">
+
+            <div class="col-md-offset-2 col-md-12">
+                <button type="button" id="btnIssueCreate" class="btn btn-primary ld-ext-right" onclick="this.classList.toggle('running')">
+                    Create
+                    <div class="ld ld-ring ld-spin"></div>
+                </button>
+                <div class="col-lg-3" style="float:right;">
+                    @Html.ActionLink("Back to List", "IndexPage", "IssueTrack")
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
     $(document).ready(function () {
         $("#btnIssueCreate").prop("disabled", true);
             $("#IDInstance").prop("disabled", true);
@@ -352,11 +352,14 @@
         if (Name == "") {
             $("#lblIssueName").html("Please enter the Issue").show().fadeOut(2000);
          }
+          else {
+           $("#lblIssueName").html("").show();
+        }
          validateIssueTrack()
      });
 
-    $("#PhaseMaster").on('focusout', function () {
-        deb
+    $("#PhaseMaster").on('change', function () {
+
         var PhaseMaster = $("#PhaseMaster").val().trim();
         if (PhaseMaster == 0) {
              $("#lblPhaseId").html("Please select the Phase").show().fadeOut(2000);
@@ -364,7 +367,7 @@
         validateIssueTrack()
     });
 
-    $("#drpAssignedTo").on('focusout', function () {
+    $("#drpAssignedTo").on('change', function () {
         var Assignedto = $("#drpAssignedTo").val().trim();
         if (Assignedto == "") {
              $("#lblAssignedTo").html("Please select the AssignedTo").show().fadeOut(2000);
@@ -450,6 +453,9 @@
         if (txtarea == "") {
             $("#lblComments").html("Please enter the Comments").show().fadeOut(2000);
         }
+         else {
+           $("#lblComments").html("").show();
+        }
         validateIssueTrack()
     });
 
@@ -487,7 +493,7 @@
     }
 
         $("#btnIssueCreate").on("click", function () {
-           
+
         var IssueName = $("#txtIssueName").val().trim();
           IssueName = IssueName.replace(",", " ");
         var PhaseMaster = $("#PhaseMaster").val().trim();
@@ -547,7 +553,7 @@
         $("#txtComments").val("");
         //$("#btnIssueCreate").
     }
-    </script>
+</script>
 <style>
     i.fa.fa-calendar-alt {
         position: absolute;
